HAWKSCOPE CHANGELOG
===================
http://hawkscope.googlecode.com

Changes in version 0.2.0 (2008-??-??)
-------------------------------------
* Added quick access list to main menu, configurable via .hawkscope.properties
  "user.home" folder read from system properties is added by default
  http://code.google.com/p/hawkscope/issues/detail?id=11
* Improved About dialog:
  - Added "Environment" field to About dialog
  - Added icon to About dialog
  - Added "Copy to Clipboard" button to About dialog for copying environmental 
    report
  http://code.google.com/p/hawkscope/issues/detail?id=12
* Fixed configuration file writing
* Changed "unknown" icon
* Removed lots of unneeded dependencies to get a lighter executable
* Switched to maven assembly plugin version 2.1 due to file duplication bug:
  http://jira.codehaus.org/browse/MASSEMBLY-355
* Fixed path resolving problems in Windows

Changes in version 0.1.2 (2008-09-28)
-------------------------------------
* Added icons for "Hide" and "Exit" actions
* Various performance and memory consumption optimizations
* Long menus now are split into parts:
  http://code.google.com/p/hawkscope/issues/detail?id=3
* Items that are neither files nor folders (i.e. unix devices in /dev/*) now
  have a separate icon and are properly displayed  
* Added "About" menu item  

Changes in version 0.1.1 (2008-09-25)
-------------------------------------
* Improved load time
* Fixed memory leak: 
  http://code.google.com/p/hawkscope/issues/detail?id=1
* File system changes are now detected: 
  http://code.google.com/p/hawkscope/issues/detail?id=4
* Added exception when system tray is not supported
  